--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>JSalpha website</title>
-    <script>
-        function codeCopy(code){
-            navigator.clipboard.writeText(code);
-        }
-    </script>
+    <script src="index.js"></script>
 </head>
-<body class="body-index">
+<body class="body-index" onload="bannerDisplay()">
     <nav>
         <strong>JSalpha website</strong>
     </nav>
     <main>
+        <header id="banner">
+
+        </header>
         <article>
             <h1>A back-end rendering engine. With the syntax of <span>Template Literals</span> ECMA-script</h1>
             <p>Download JSalpha:</p>
