--- a/fr/index.html
+++ b/fr/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>JSalpha website</title>
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="../style.css">
+    <title>Site web du JSalpha</title>
+    <script src="../index.js"></script>
 </head>
-<body class="body-index" onload="bannerDisplay('en')">
+<body class="body-index" onload="bannerDisplay('fr')">
     <nav>
-        <strong>JSalpha website</strong>
+        <strong>Site web du JSalpha</strong>
         <div class="dropdown">
-        <snap class="dropbtn">Lang</snap>
-            <div class="dropdown-content">
-            <a>English</a>
-            <a href="fr/">Français</a>
-            </div>
+            <snap class="dropbtn">Langue</snap>
+                <div class="dropdown-content">
+                <a href="/">English</a>
+                <a>Français</a>
+                </div>
         </div>
     </nav>
     <main>
@@ -23,15 +23,15 @@
 
         </header>
         <article>
-            <h1>A back-end rendering engine. With the syntax of <span>Template Literals</span> ECMA-script</h1>
-            <p>Download JSalpha:</p>
+            <h1>Un moteur de rendu back-end. Avec la syntaxe des <span>Template Literals</span> ECMA-script</h1>
+            <p>Télécharger JSalpha:</p>
             <div class="code">
                 <code>npm install jsalpha</code>
                 <svg class="copy" onclick="codeCopy('npm install jsalpha')" fill="none" height="15px" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="15px" xmlns="http://www.w3.org/2000/svg"><rect height="13" rx="2" ry="2" width="13" x="9" y="9"/><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/></svg>
             </div>
         </article>
         <article>
-            <h2>Official plugins</h2>
+            <h2>Plugins officiels</h2>
             <ul>
                 <li>
                     <p><strong>JSalpha-markdown</strong> It allows to insert the data of a markdown in a jsa template. For more information go to the <a href="https://github.com/AugustinMauroy/JSA-Markdown/blob/main/docs/README.md">docs</a></p>
@@ -39,25 +39,25 @@
             </ul>
         </article>
         <article>
-            <h2>Functionality planning</h2>
+            <h2>Fonctionnalités prévues</h2>
             <ul>
                 <li>
-                    <p><strong>JSalpha-yalm</strong> will be a plugin to accept YALM in a Jsa template</p>
+                    <p><strong>JSalpha-yalm</strong> sera un plugin pour accepter YALM dans un modèle Jsa</p>
                 </li>
                 <li>
-                    <p><strong>JSalpha-build</strong> it is already in progress. It would be a website builder based on jsa.</p>
+                    <p><strong>JSalpha-build</strong> il est déjà en cours. Il s'agirait d'un constructeur de site web basé sur jsa.</p>
                 </li>
             </ul>
         </article>
         <article>
-            <h2>Get involved</h2>
-            <p>There are several points on which you can participate.</p>
+            <h2>S'impliquer</h2>
+            <p>Il y a plusieurs points sur lesquels vous pouvez participer.</p>
             <ul>
                 <li>
-                    <p><strong>Reporting an Issue</strong> You have a problem? A bug? Open an issue on <a href="https://github.com/augustinmauroy/jsa">GitHub</a>! We will fix it.</p>
+                    <p><strong>Signaler un bogue</strong> Vous avez un problème ? Un bug ? Ouvrez une issue sur <a href="https://github.com/augustinmauroy/jsa">GitHub</a>! Nous allons le réparer.</p>
                 </li>
                 <li>
-                    <p><strong>Provide functionality to jsalpha or a plugin</strong> If you have an idea open an issue on <a href="https://github.com/augustinmauroy/jsa">GitHub</a>. And tell us what you have in mind.</p>
+                    <p><strong>Fournir une fonctionnalité à jsalpha ou à un plugin</strong> Si vous avez une idée, ouvrez une issue sur <a href="https://github.com/augustinmauroy/jsa">GitHub</a>. Et dites-nous ce que vous avez en tête.</p>
                 </li>
             </ul>
         </article>
