--- a/fr/index.html
+++ b/fr/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
         <div class="dropdown">
             <snap class="dropbtn">Langue</snap>
                 <div class="dropdown-content">
-                <a href="/">English</a>
+                <a href="JSA/">English</a>
                 <a>Français</a>
                 </div>
         </div>
