--- a/fr/index.html
+++ b/fr/index.html
@@ -13,7 +13,7 @@
         <div class="dropdown">
             <snap class="dropbtn">Langue</snap>
                 <div class="dropdown-content">
-                <a href="JSA/">English</a>
+                <a href="/JSA/">English</a>
                 <a>Français</a>
                 </div>
         </div>
