--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
         <article>
             <h1>Error 404</h1>
             <p>The page you're trying to access does not exist. Go back to the Homepage</p>
-            <a href="/">Go back to the home page</a>
+            <a href="JSA/">Go back to the home page</a>
         </article>
     </main>
 </body>
